added auth flow

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "UzairTest",
+  "name": "sequelize-boiler-plate",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "jest --detectOpenHandles --forceExit",
     "start": "nodemon server.js",
+    "make:controller": "node scripts/generate.controller.js",
+    "make:service": "node scripts/generate.service.js",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "model:generate": "npx sequelize-cli model:generate",
+    "model:generate": "npx sequelize-cli model:generate --name ",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
     "db:migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
     "seed:generate": "npx sequelize-cli seed:generate --name",
@@ -25,8 +27,11 @@
     "express-validator": "^7.0.1",
     "fs": "0.0.1-security",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.8",
     "path": "^0.12.7",
     "pg": "^8.11.0",
+    "pug": "^3.0.2",
     "sequelize": "^6.31.1",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3"
