--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
+NODE_ENV="test"
+PORT=5001
+
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASS=password
 DB_NAME=uzair_test
 DB_DIALECT=postgres
 DB_PORT=5432
-PORT=5001
+
 TEST_DB_HOST=localhost
 TEST_DB_USER=postgres
 TEST_DB_PASS=password
@@ -12,4 +15,11 @@ TEST_DB_NAME=test_bank
 TEST_DB_DIALECT=postgres
 TEST_DB_PORT=5432
 TEST_PORT=5005
-NODE_ENV="test"
+
+# SMTP configuration options for the email service
+# For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
+SMTP_HOST=
+SMTP_PORT=2525
+SMTP_USERNAME=
+SMTP_PASSWORD=
+EMAIL_FROM=xyz@support.com
