added chat backend

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ SMTP_PORT=2525
 SMTP_USERNAME=
 SMTP_PASSWORD=
 EMAIL_FROM=xyz@support.com
+
+PUSHER_APP_ID=''
+PUSHER_APP_KEY=''
+PUSHER_APP_SECRET=''
+PUSHER_APP_CLUSTER=''
